# AEDA

./: .gitignore  Activity.h  CMakeLists.txt  Client.h  Main.cpp  Material.h  README.md  School.h  Staff.h
Data/: Activities.txt  Clients.txt  Materials.txt  School.txt  Teachers.txt
Data/1/: Activities.txt  Clients.txt  Materials.txt  School.txt  Teachers.txt
Data/2/: Clients.txt  School.txt
Data/3/: Clients.txt  Materials.txt  School.txt
Data/4/: School.txt
Data/5/: School.txt
Headers/: Activity.h  Auxiliary.h  BST.h  Client.h  Material.h  Menu.h  Schedule.h  School.h  Staff.h  Teacher.h  Time.h
Praticas/aeda1920_fp02_extra/Tests/: animal.cpp
Praticas/aeda1920_fp03/Tests/: grafo.h
Praticas/aeda1920_fp04/Tests/: parque.h  tests.cpp
Praticas/aeda1920_fp05/Tests/: jogo.h  (+1 more)
SUP School/: .gitignore
SUP School/Data/: Materials.txt
SUP School/Headers/: Activity.h  Material.h  Schedule.h  Staff.h  Time.h
SUP School/Source/: Auxiliary.cpp  Client.cpp  Menu.cpp  Schedule.cpp  School.cpp  Time.cpp
Source/: Activity.cpp  Auxiliary.cpp  Client.cpp  Main.cpp  Material.cpp  Menu.cpp  Schedule.cpp  School.cpp  Staff.cpp  Teacher.cpp  Time.cpp
aeda1920_fp01/: main.cpp
aeda1920_fp01/Tests/: parque.cpp  parque.h  tests.cpp
aeda1920_fp02/: main.cpp
aeda1920_fp02/Tests/: frota.h  veiculo.cpp  veiculo.h
aeda1920_fp02_extra/: main.cpp
aeda1920_fp02_extra/Tests/: tests.cpp  veterinario.cpp  veterinario.h  zoo.cpp  zoo.h
aeda1920_fp03/Tests/: tests.cpp
aeda1920_fp04/Tests/: insertionSort.h  parque.cpp  sequentialSearch.h
aeda1920_fp05/Tests/: jogo.cpp
(+49 files in other folders)
